# pixi-build-backends

./: .gitignore  Cargo.toml  pixi.toml
.github/workflows/: testsuite.yml
backends/pixi-build-ros/src/pixi_build_ros/: config.py  utils.py
backends/pixi-build-ros/tests/: test_package_xml.py
c-pixi-build-backend/: .gitignore  Cargo.toml  pixi-build-backend.h  pixi.toml  recipe.yaml  rust_points.h
c-pixi-build-backend/examples/: minimal.c
c-pixi-build-backend/examples/pixi-build-autotools/: CMakeLists.txt  pixi.toml
c-pixi-build-backend/examples/pixi-build-autotools/src/: main.c
c-pixi-build-backend/src/: lib.rs
crates/pixi-build-backend/src/: cli.rs  generated_recipe.rs  intermediate_backend.rs  lib.rs  server.rs
crates/pixi-build-backend/src/utils/: test.rs
crates/pixi-build-backend/tests/integration/: protocol.rs
crates/pixi-build-cmake/src/: main.rs
crates/pixi-build-mojo/src/: main.rs
crates/pixi-build-mojo/src/snapshots/: pixi_build_mojo__tests__compiler_is_not_added_if_compiler_is_already_present.snap
crates/pixi-build-python/src/: main.rs
crates/pixi-build-rattler-build/: Cargo.toml
crates/pixi-build-rattler-build/src/: config.rs  protocol.rs
crates/pixi-build-rust/src/: main.rs
docs/: index.md
docs/backends/: pixi-build-rattler-build.md
py-pixi-build-backend/: Cargo.toml
py-pixi-build-backend/examples/pixi-build-python/pixi_build_python/: python_generator.py
py-pixi-build-backend/pixi_build_backend/types/: generated_recipe.py
py-pixi-build-backend/src/types/: generated_recipe.rs
py-pixi-build-backend/tests/unit/: test_generated_recipe.py
recipe/: variants.yaml
recipe/testsuite-backends/: recipe.yaml
scripts/: activate.sh  copy-backends.py
