[package]
name = "c-pixi-build-backend"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
pixi-build-backend = { workspace = true }
recipe-stage0 = { workspace = true }
pixi_build_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
rattler_conda_types = { workspace = true }
url = { workspace = true }
rattler_digest.workspace = true

[dependencies.safer-ffi]
version = "0.1.13"
features = ["alloc", "dyn-traits"]

[features]
# If you want to generate the headers, use a feature-gate
# to opt into doing so:
headers = ["safer-ffi/headers"]

[[bin]]
name = "generate-headers"
required-features = ["headers"]      # Do not build unless generating headers.
path = "src/bin/generate-headers.rs"
